# tigers

./: .gitignore  Cargo.toml  book.toml  build.rs  coverage.sh
docs/: 404.html  book.toml  chapter_1.html  index.html  print.html
src/: ast.rs  lex.rs  lib.rs  main.rs  parse.rs  tiger.lalrpop  tokens.rs
tests/: parse_expr.rs  smol.tig  term_parser.rs
