[package]
name = "tigers"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.0"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com"]
license-file = "LICENSE.md"
repository = "https://github.com/aalekhpatel07/tigers"
homepage = "https://aalekhpatel07.github.io/tigers/"
readme = "README.md"
categories = ["compilers"]
exclude = ["book-src/", "docs/", ".*"]

[profile.release]
lto = "fat"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
lazy_static = "1.4.0"

# For parsing and lexing.
miette = { version = "5", features = ["fancy"] }
nom = "7"
nom-supreme = "0.8"
nom_locate = "4"
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
proptest = "1.0.0"
test-case = "2.2.2"
