[package]
name = "tigers"
version = "0.1.0"
edition = "2021"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com"]

build = "build.rs"

[profile.release]
lto = "fat"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
regex = "1"

[build-dependencies]
lalrpop = "0.19.9"

[dev-dependencies]
test-case = "3.1.0"
